<resources>
    <string name="app_name">MusiCalizza</string>
    <string name="title_activity_login">Inicio de Sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="key_access_token">access_token</string>

    <!--activity_main-->
    <string name="activity_main_drawer_lyrics">Letras</string>
    <string name="activity_main_drawer_albums">Álbumes</string>
    <string name="activity_main_drawer_artists">Artistas</string>
    <string name="activity_main_drawer_me_group">Yo</string>
    <string name="activity_main_drawer_my_account">Mi cuenta</string>
    <string name="activity_main_drawer_log_out">Iniciar sesión</string>
    <string name="activity_main_drawer_offline_lyrics">Mis letras descargadas</string>

    <string name="activity_main_nav_header_default_name">Nombre Usuario</string>
    <string name="activity_main_nav_header_default_email">Correo</string>

    <!--activity_details_complaints-->
    <string name="activity_details_complaints_title_lyrics">Letra</string>
    <string name="activity_details_complaints_title_category">Categoría</string>

    <!--activity_new_complaint-->
    <string name="activity_new_complaint_title">Titulo</string>
    <string name="activity_register_lyrics_lyrics">Letras</string>
    <string name="activity_new_complaint__message_empty_title">Debe definir un titulo</string>
    <string name="activity_new_complaint_message_empty_description">Debe definir una descripción</string>
    <string name="activity_new_complaint_hint_complaint">Ingrese su denuncia</string>
    <string name="activity_new_complaint_to_post">Publicar</string>
    <string name="activity_new_complaint_set_location">Elejir ubicación</string>
    <string name="activity_new_complaint_empty_location">Primero elija la ubicación</string>

    <string name="activity_new_complaint_complete_select_images">Finalizar</string>
    <string name="activity_new_complaint_not_select_images">Debe de selecionar almenos una imagen</string>
    <string name="activity_new_complaint_empty_select_images">Sin fotos</string>
    <string name="activity_new_complaint_starting_publication">Publicando denuncia</string>

    <string name="activity_new_complaint_sending_message">Publicando, %1$d de %2$d imagenes.</string>
    <string name="activity_new_complaint_message_cancel">Publicación de la nueva denuncia cancelada</string>
    <string name="activity_new_complaint_route_image">images/%1$s.jpg"</string>
    <string name="activity_new_complaint_title_cancel">Cancelar</string>
    <string name="activity_new_complaint_title_dialog">Publicando</string>
    <string name="activity_new_complaint_message_empty_image">Error: al cargar la imagen</string>

    <!--activity_sing_in-->
    <string name="activity_sing_in_email">Correo electrónico</string>
    <string name="activity_sing_in_question">¿No tienes cuenta?</string>
    <string name="activity_sing_in_password">Contraseña</string>
    <string name="activity_sing_in_sign_up">REGISTRAME</string>
    <string name="activity_sing_in_button_title">ENTRAR</string>
    <string name="activity_sing_in_message_empty_email">No ha definido un correo</string>
    <string name="activity_sing_in_message_empty_password">No ha definido su contraseña</string>
    <string name="one_hour_ago">Hace 1 hora</string>
    <string name="activity_sing_in_title">LOGIN</string>
    <string name="activity_sing_in_title_sign_in">ENTRAR</string>


    <!--categories_view-->
    <string name="categories_view_title">Categorías</string>

    <!--category_post-->
    <string name="category_post_title">Publicando</string>

    <!--Error messages of application-->

    <string name="without_permits">Si rechaza el permiso, no puede usar este servicio</string>
    <string name="error_publishing_complaint">No se publicó la denuncia</string>
    <string name="error_message">ERROR</string>

    <!--Error message in ComplaintAdapter-->
    <string name="complaint_adapter_error_message">ERROR TRY CATCH</string>

    <!--Message application-->
    <string name="message_delete_complaint">ELIMINADA</string>
    <string name="message_without_connection">Error, sin conexión a internet</string>

    <!--activity_sign_up-->
    <string name="activity_sign_up_name">Nombre completo</string>
    <string name="activity_sign_up_username">Nombre de usuario</string>
    <string name="activity_sign_up_email">Correo electrónico</string>
    <string name="activity_sign_up_password">Contraseña</string>
    <string name="activity_sing_up_empty_fields_message">Todos los campos son requeridos.</string>

    <string name="activity_sign_up_back_button">Regresar</string>
    <string name="activity_sign_up_sign_up_button">Registrarme</string>

    <!--activity_map-->
    <string name="title_activity_maps">Mapa</string>

    <string name="without_connection_message">Revise su conexión a internet e intente nuevamente</string>
    <string name="title_activity_mape">Map</string>
    <string name="title_activity_mm">Map</string>
    <string name="title_activity_ee">Map</string>
    <string name="title_activity_maps123">Map</string>

    <!--fragment_my_complaints-->
    <string name="more_button_complaint_card_view">Ver más</string>
    <string name="delete_confirmation_title">¿Desea eliminar la denuncia?</string>
    <string name="delete_confirmation_description">Tenga en cuenta que esta acción no se puede deshacer.</string>
    <string name="delete_complaint_option_popup">Eliminar</string>
    <string name="positive_option_alert_dialog">Sí</string>
    <string name="negative_option_alert_dialog">No</string>
    <string name="search_view_hint">Escribe para buscar denuncias</string>
    <string name="content_description_image_view_viewpager">Foto(s) de la(s) denuncia(s)</string>
    <string name="title_activity_main">Musicalizza</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home_fragment">Todas las letras</string>
    <string name="title_tab_unverified_lyrics_fragment">Letras sin verificar</string>
    <string name="activity_register_artist_text">Artista:</string>
    <string name="activity_register_lyrics_type_album">Tipo de Álbum:</string>
    <string name="activity_register_lyrics_type_album_selected">Género:</string>
    <string name="album">Álbum:</string>
    <string name="register_lyrics_ep_text">EP:</string>

    <!-- Type Album Spinner Array -->
    <string-array name="type_album_array">
        <item>Single</item>
        <item>Álbum</item>
        <item>EP</item>
    </string-array>

    <string name="title_song">IV. Sweatpants</string>
    <string name="author">Shildish Gambino</string>
    <string name="popular">POPULAR SONG LYRICS</string>
    <string name="activity_show_lyrics_text_lyric">Letras</string>

</resources>
